[package]
name = "slanderbar"
version = "0.1.0"
authors = ["Umberto Toniolo <amountainram@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.61"
nom = "7.1.3"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
humantime = "2.1.0"
wasm-bindgen-test = "0.3.13"
web-sys = {version = "0.3.61", features = ["Window", "Performance", "PerformanceTiming"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
